# cppelix-celix-shim

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/celix_example/: CelixService.h  main.cpp
include/celix_shim_library/: CelixShimService.h
